# pocoextensions

./: CMakeLists.txt  COPYING
include/Poco/Net/: HTTPAuthenticationParams.h  HTTPCredentials.h  HTTPDigestCredentials.h  Utility.h
src/Net/: HTTPAuthenticationParams.cpp  HTTPCredentials.cpp  HTTPDigestCredentials.cpp  Utility.cpp
test/: test.cpp  test.sh
